<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
	<string name="certificate">Mensaje en proceso de certificación&#8230;</string>
	<string name="app_name">Vloom</string>
	<string name="acepted">Aceptado</string>
	<string name="action_example">Ejemplo</string>
	<string name="action_settings">Ajustes</string>
	<string name="activate_notif">Activar Notificaciones</string>
	<string name="agree">Aceptar</string>
	<string name="app">Aplicación</string>
	<string name="attach_limit">Has alcanzado el límite de imágenes adjuntas</string>
	<string name="bad_request">Solicitud Incorrecta</string>
	<string name="block_service_text">No recibirás más notificaciones, ni información de este servicio.</string>
	<string name="block_service">Bloquear servicio</string>
	<string name="block">Bloquear</string>
	<string name="btn_continue">Continuar</string>
	<string name="btn_next">Siguiente</string>
	<string name="btn_retry">Reintentar</string>
	<string name="btn_send">Enviar</string>
	<string name="btn_skip">Saltar</string>
	<string name="code_blank">Debes ingresar el código de verificación</string>
	<string name="code_wrong">El código de verificación debe ser numérico</string>
	<string name="code_alphanumeric">El valor debe ser alfanumérico</string>
	<string name="code">Código</string>
	<string name="company_unamed">Sin nombre</string>
	<string-array name="countries">
		<item>Argentina</item>
		<item>Chile</item>
		<item>Mexico</item>
	</string-array>
	<string name="country_hint">Seleccione un país</string>
	<string name="country">Elije tu País</string>
	<string name="created">Creado</string>
	<string name="day">día</string>
	<string name="days">días</string>
	<string name="disagree">Cancelar</string>
	<string name="email_blank">Debes ingresar un correo electrónico</string>
	<string name="email_wrong">Formato de correo electrónico inválido</string>
	<string name="email">Correo electrónico</string>
	<string name="empty_messages_text">Borrarás todos los mensajes que has recibido.</string>
	<string name="empty_messages">Vaciar mensajes</string>
	<string name="enrich_addcommentheader">Añadir comentario</string>
	<string name="enrich_commentheader">Editar comentario</string>
	<string name="enrich_commenthint">Escribe un comentario&#8230;</string>
	<string name="enrich_addnoteheader">Añadir nota</string>
	<string name="enrich_noteheader">Editar nota</string>
	<string name="enrich_notehint">Escribe una nota&#8230;</string>
	<string name="enrich_notetype">Nota personal</string>
	<string name="enrich_receipt">Factura</string>
	<string name="enrich_save">GUARDAR</string>
	<string name="error_upgrade">Ya estamos de vuelta sentimos las molestias ocasionadas</string>
	<string name="feedback_error">Por favor, ingresa un comentario</string>
	<string name="feedback_issue">Reportar como incidencia</string>
	<string name="feedback_ok">Hemos recibido tu mensaje correctamente</string>
	<string name="feedback_text">Compartinos tu experiencia</string>
	<string name="feedback_typepush">Respuesta de soporte</string>
	<string name="folder_btn">Crear carpeta de notas</string>
	<string name="folder_header">Renombrar</string>
	<string name="folder_hint">Escribe un nombre&#8230;</string>
	<string name="folder_industry">Carpeta de notas</string>
	<string name="folder_notfound">No encontramos resultados para tu búsqueda</string>
	<string name="folder_showcase">Ahora puedes crear carpetas propias para guardar tus notas y encontrarlas más fácil!</string>
	<string name="gcm_send_message">Token recuperado y enviado al servidor</string>
	<string name="get_play_services">Obtén Google Play Services</string>
	<string name="hello_world">Hola</string>
	<string name="home">Verifica tu n° de celular para una mejor experiencia con VíaCelular</string>
	<string name="hours">horas</string>
	<string name="id_help">Esta empresa permite enlazar tu cuenta con Vloom mediante el ingreso de un código identificador alfanúmerico que normalmente se ubica en el sector superior de la factura</string>
	<string name="id_ok">Experiencia mejorada</string>
	<string name="id_oktext">Tu identificador es:</string>
	<string name="id_title">Mejora tu experiencia</string>
	<string name="id_text">Recibe mensajes exclusivos como facturas ingresando tu</string>
	<string name="id_update">Actualiza tu identificador</string>
	<string name="id_hint">Escribe tu identificador</string>
	<string name="id_retry">Reintentar</string>
	<string name="i_read">Al pulsar Continuar aceptas los Términos y Condiciones</string>
	<string name="invite">Invitación</string>
	<string name="landing_card_form_header">Mejora tu experiencia</string>
	<string name="landing_card_form_text1">Recibe notificaciones personalizadas, ingresa tu</string>
	<string name="landing_card_form_text2">y haz clic en continuar.</string>
	<string name="landing_card_error_header">Oops!</string>
	<string name="landing_card_error_retry">Enviar nuevamente</string>
	<string name="landing_card_error_text">Tus datos no se guardaron, por favor intenta nuevamente.</string>
	<string name="landing_card_loading_header" tools:ignore="Typos">Solo un momento&#8230;</string>
	<string name="landing_card_loading_text">Estamos guardando tus datos</string>
	<string name="landing_card_ok_header">¡Todo en marcha!</string>
	<string name="landing_card_ok_text">Guardamos tu identificación de cliente para ofrecerte una mejor experiencia</string>
	<string name="landing_contact">Contacto</string>
	<string name="landing_dismiss">Ignorar</string>
	<string name="landing_example">Mensajes de ejemplo</string>
	<string name="landing_suscribe">Añadir</string>
	<string name="landing_suscribed">Añadida</string>
	<string name="landing_unsuscribe">Quitar</string>
	<string name="landing_title">Recibe notificaciones de vencimiento, promociones y novedades de <xliff:g example="Empresa" id="company">%s</xliff:g></string>
	<string name="login_begin">Inicia sesión para empezar</string>
	<string name="login">Iniciar sesión con tu e-mail</string>
	<string name="logout">Cerrar Sesión</string>
	<string name="mail_android">\n* Android:</string>
	<string name="mail_chooser">Enviar correo con</string>
	<string name="mail_date">* Fecha:</string>
	<string name="mail_device">\n* Dispositivo:</string>
	<string name="mail_lang">\n* Idioma:</string>
	<string name="mail_version">\n* Versión:</string>
	<string name="main_channel">No puedes realizar esta acción en este servicio</string>
	<string name="minutes">minutos</string>
	<string name="month">mes</string>
	<string name="months">meses</string>
	<string name="mute_notifications">Silenciar Notificaciones</string>
	<string name="navigation_drawer_close">Cierra el menú lateral</string>
	<string name="navigation_drawer_open">Abre el menú lateral</string>
	<string name="no_blocked">No hay empresas bloqueadas</string>
	<string name="no_subblocked">Cuando existan empresas o servicios bloqueados podrás verlos aquí.</string>
	<string name="no_content">Sin contenido</string>
	<string name="no_country">Debes seleccionar tu país</string>
	<string name="no_internet">No dispones de conexión a internet</string>
	<string name="no_messages_card">Sin mensajes</string>
	<string name="no_messages_text">Aún no has recibido nada por aquí, te avisaremos cuando esto suceda.</string>
	<string name="no_notifications">Sin notificaciones</string>
	<string name="no_subnotifications">Aún no has recibido ningún mensaje de empresas o servicios.</string>
	<string name="no_play_services">Vloom no se ejecutará correctamente sin los servicios de Google Play faltantes en su dispositivo</string>
	<string name="no_supported">Este dispositivo no es compatible con la aplicación</string>
	<string name="not_available">Lo sentimos, esta función estará disponible en una futura actualización</string>
	<string name="notification">Notificación</string>
	<string name="notification_new">Tienes una nueva notificación</string>
	<string name="notification_view">Ver notificaciones</string>
	<string name="now">Ahora</string>
	<string name="ok">OK</string>
	<string name="one_hour">1 hora</string>
	<string name="one_minute">1 minuto</string>
	<string name="password_blank">Debes ingresar una contraseña</string>
	<string name="password_wrong">Las contraseñas no coinciden</string>
	<string name="password">Contraseña</string>
	<string name="phone_blank">Debes ingresar tu número de teléfono</string>
	<string name="phone_desc">Enviaremos un SMS con el código de verificación a tu número. Para usar Vloom tienes que verificar tu número de teléfono.</string>
	<string name="phone_example">Por ejemplo:</string>
	<string name="phone_hint">Coloque su teléfono</string>
	<string name="phone_invalid">Tu número de teléfono debe ser númerico</string>
	<string name="phone_lenght">Tu número de teléfono debe respetar la cantidad de dígitos según tu país</string>
	<string name="phone">Teléfono</string>
	<string name="please_retry">Por favor reintenta más tarde</string>
	<string name="please_wait">Por favor aguarde&#8230;</string>
	<string name="progress_dialog">Procesando&#8230;</string>
	<string name="rate_dialog_title">¿Calificar con 5 estrellas a Vloom?</string>
	<string name="rate_dialog_message">Será sólo un minuto. Tu opinión es importante para nosotros ¡Gracias!</string>
	<string name="rate_dialog_ok">Calificar</string>
	<string name="rate_dialog_cancel">Más tarde</string>
	<string name="rate_dialog_no">No, gracias</string>
	<string name="reciveInfo">Recibe información destacada de tus servicios</string>
	<string name="refresh_complete">Se han actualizado tus suscripciones</string>
	<string name="refresh_menu">Actualizar</string>
	<string name="register_begin">Registrate para empezar</string>
	<string name="register_dialog">Registrando&#8230;</string>
	<string name="register">Registrate con tu e-mail</string>
	<string name="register_business">Registrarme en Business</string>
	<string name="registering_message">Generando ID de instancia para token&#8230;</string>
	<string name="reimport_sms">Re-Importar mis SMS</string>
	<string name="repassword_blank">Debes confirmar la contraseña</string>
	<string name="repassword">Repetir contraseña</string>
	<string name="report">Denunciar</string>
	<string name="response_invalid">Tu solicitud no pudo ser procesada, intenta nuevamente</string>
	<string name="seach">Buscar</string>
	<string name="seach_hint">Comienza a escribir el nombre de la empresa a buscar</string>
	<string name="seach_title">Buscar empresa</string>
	<string name="showcase_note_title">Notas, Comentarios y Fotos</string>
	<string name="showcase_note_subtitle">Ahora puedes crear notas y agregar fotos y comentarios a tus mensajes!</string>
	<string name="send_code">Enviamos un SMS con el código de activación al número</string>
	<string name="send_mail_text">con Vloom Android:\n</string>
	<string name="send_push_sms">Enviar notificación de prueba (SMS)</string>
	<string name="send_push">Enviar notificación de prueba</string>
	<string name="send_simil_sms">Enviar SMS de prueba</string>
	<string name="send_statistics">Ayuda a mejorar</string>
	<string name="sent_sms">Enviamos un SMS con el código de activación al número +000000000000</string>
	<string name="service_unavailable">Servicio Temporalmente No Disponible</string>
	<string name="share">Compartir</string>
	<string name="special_card_download">Descargar</string>
	<string name="special_card_video">Ver Trailer</string>
	<string name="suggestions_subtitle" tools:ignore="Typos">Recibirás información relevante de tus suscripciones, recuerda que puedes quitar esta empresa en cualquier momento si lo deseas.</string>
	<string name="suggestions_title">Tus primeras suscripciones</string>
	<string name="today">Hoy</string>
	<string name="you_have_text">Podrás recibir, compartir o silenciar los mensajes, si te molestan puedes bloquear la empresa, también denunciarla para ayudarnos a mejorar.</string>
	<string name="you_have">Tu tienes el control</string>
</resources>