<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginBottom="4dp"
	android:layout_marginTop="4dp"
	android:id="@+id/rlItem"
	android:background="@color/background_company">
	<TextView
		android:id="@+id/rowTime"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingRight="10dp"
		android:layout_marginBottom="8dp"
		android:text="@string/today"
		android:textColor="@color/gray"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true" />
	<android.support.v7.widget.CardView
		android:id="@+id/cardView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		card_view:cardBackgroundColor="@android:color/white"
		card_view:cardCornerRadius="16dp"
		card_view:cardElevation="2dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginBottom="4dp"
		android:layout_below="@+id/rowTime">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<RelativeLayout
				android:id="@+id/rlCard"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="24dp"
				android:paddingRight="16dp"
				android:paddingBottom="16dp"
				android:paddingLeft="16dp">
				<TextView
					android:id="@+id/txtTitle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/rate_dialog_title"
					android:textColor="@color/action"
					android:textSize="20sp" />
				<TextView
					android:id="@+id/txtContent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/you_have_text"
					android:layout_marginTop="10dp"
					android:textColor="@color/black"
					android:layout_below="@+id/txtTitle"
					android:autoLink="web"
					android:textSize="15sp"
					android:lineSpacingExtra="4dp" />
			</RelativeLayout>
			<View
				android:id="@+id/dividerTitle"
				android:background="@color/light_gray"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginTop="8dp"
				android:visibility="visible"
				android:layout_below="@+id/rlCard" />
			<ImageView
				android:id="@+id/iconDown"
				android:layout_width="20dp"
				android:layout_height="20dp"
				android:layout_marginLeft="16dp"
				android:layout_marginStart="16dp"
				android:layout_below="@id/dividerTitle"
				android:src="@drawable/ic_circle_file_download"
				android:visibility="visible"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:layout_centerVertical="true"
				android:contentDescription="@string/landing_contact" />
			<Button
				android:id="@+id/btnDownload"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="10dp"
				android:layout_marginLeft="10dp"
				android:layout_marginStart="10dp"
				android:text="@string/special_card_download"
				android:textAllCaps="true"
				android:textColor="@color/accent"
				android:background="@android:color/transparent"
				android:shadowColor="@android:color/transparent"
				android:layout_below="@+id/dividerTitle"
				android:layout_toRightOf="@+id/iconDown"
				android:layout_toEndOf="@+id/iconDown" />
		</RelativeLayout>
	</android.support.v7.widget.CardView>
</RelativeLayout>