<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/cardView"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	card_view:cardUseCompatPadding="true"
	card_view:cardBackgroundColor="@android:color/white"
	card_view:cardCornerRadius="4dp"
	card_view:cardElevation="4dp"
	android:layout_marginLeft="10dp"
	android:layout_marginRight="10dp">
	<RelativeLayout
		android:id="@+id/rlCard"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:paddingTop="24dp"
		android:paddingRight="16dp"
		android:paddingBottom="16dp"
		android:paddingLeft="16dp">
		<TextView
			android:id="@+id/txtTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/you_have"
			android:textColor="@color/gray"
			android:textSize="20sp" />
		<TextView
			android:id="@+id/txtContent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/you_have_text"
			android:layout_marginTop="10dp"
			android:textColor="@color/black"
			android:layout_below="@+id/txtTitle"
			android:autoLink="web"
			android:textSize="15sp"
			android:lineSpacingExtra="4dp" />
		<TextView
			android:id="@+id/rowTime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="10dp"
			android:paddingEnd="10dp"
			android:text="@string/today"
			android:textColor="@color/gray"
			android:layout_marginTop="10dp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_below="@id/txtContent" />
	</RelativeLayout>
</android.support.v7.widget.CardView>