<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/swiperefresh"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<RelativeLayout
		android:id="@+id/rlContent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/toolBar">
		<RelativeLayout
			android:id="@+id/rlEmpty"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			<ImageView
				android:contentDescription="@string/app_name"
				android:id="@+id/ivEmpty"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/no_notifications"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="40dp" />
			<TextView
				android:id="@+id/txtTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_notifications"
				android:textColor="@color/sub_text"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="bold"
				android:layout_below="@+id/ivEmpty"
				android:layout_alignLeft="@+id/ivEmpty"
				android:layout_alignStart="@+id/ivEmpty"/>
			<TextView
				android:id="@+id/txtSubTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_subnotifications"
				android:textColor="@color/sub_text"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_marginTop="10dp"
				android:layout_below="@+id/txtTitle"
				android:layout_alignLeft="@+id/txtTitle"
				android:layout_alignStart="@+id/txtTitle"
				android:layout_marginLeft="2dp"
				android:layout_marginStart="2dp"
				android:layout_alignRight="@+id/ivEmpty"
				android:layout_alignEnd="@+id/ivEmpty"/>
		</RelativeLayout>
		<android.support.v7.widget.RecyclerView
			android:id="@+id/rcwHome"
			android:scrollbars="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@+id/rlEmpty"
			android:layout_marginTop="8dp" />
	</RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>