<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:fitsSystemWindows="true"
	tools:context="com.tween.viacelular.activities.SuggestionsActivity">
	<include
		android:id="@+id/toolBarSuggestion"
		layout="@layout/tool_bar" />
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/toolBarSuggestion">
		<android.support.v7.widget.CardView
			android:id="@+id/cardSuggestion"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			card_view:cardBackgroundColor="@android:color/white"
			card_view:cardCornerRadius="3dp"
			card_view:cardElevation="4dp"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginBottom="14dp">
			<RelativeLayout
				android:id="@+id/rlForm"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingRight="16dp"
				android:paddingBottom="16dp"
				android:paddingLeft="16dp">
				<ImageView
					android:contentDescription="@string/app_name"
					android:id="@+id/ivForm"
					android:layout_width="wrap_content"
					android:layout_height="200dp"
					android:src="@drawable/step1_idkey"
					android:layout_alignParentBottom="false"
					android:layout_alignParentRight="false"
					android:layout_alignParentEnd="false"
					android:layout_alignParentTop="false"
					android:layout_alignParentLeft="false"
					android:layout_alignParentStart="false"
					android:layout_marginTop="-20dp"/>
				<TextView
					android:id="@+id/txtTitleForm"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/ivForm"
					android:text="@string/suggestions_title"
					android:textColor="@color/black"
					android:gravity="center"
					android:textSize="18sp" />
				<TextView
					android:id="@+id/txtSubTitleForm"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/txtTitleForm"
					android:text="@string/suggestions_subtitle"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:layout_marginTop="10dp"
					android:textColor="@color/gray"
					android:lineSpacingExtra="4dp"
					android:textSize="14sp"
					android:gravity="center" />
				<Button
					android:id="@+id/btnContinueForm"
					android:layout_width="wrap_content"
					android:minWidth="88dp"
					android:layout_height="36dp"
					android:text="@string/btn_continue"
					android:textColor="@android:color/white"
					android:textColorHint="@android:color/secondary_text_light"
					android:textSize="14sp"
					android:onClick="begin"
					android:background="@color/accent"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:layout_marginTop="20dp"
					android:layout_marginBottom="20dp"
					android:layout_below="@+id/txtSubTitleForm"
					android:layout_centerHorizontal="true" />
			</RelativeLayout>
		</android.support.v7.widget.CardView>
	</RelativeLayout>
</RelativeLayout>